Vistas con listas

--- a/AppWeb/WebContent/web/newMDPersonale.xhtml
+++ b/AppWeb/WebContent/web/newMDPersonale.xhtml
@@ -90,79 +90,74 @@
 			<p:inputText value="#{midatospersonaleController.midatospersonale.cedula}"  
 			required="true" requiredMessage="El campo Ciudadanía es requerido" ><p:keyFilter regEx="/[\d\-]/"/></p:inputText>
 			
-			<p:outputLabel value="Lugar de nacimiento"/>
-			<p:inputText value="#{midatospersonaleController.midatospersonale.lugarDeNacimientoTexto}"  
-			required="true" requiredMessage="El campo Lugar de nacimiento es requerido" ></p:inputText>
-			
-			<h:outputText value="Estado Civil" />
-			<p:inputText value="#{midatospersonaleController.midatospersonale.estadoCivilTexto}"  
-			required="true" requiredMessage="El campo Estado Civil es requerido" ></p:inputText>
-			
-			<h:outputText value="Tipo de Sangre" />
-			<p:inputText value="#{midatospersonaleController.midatospersonale.tipoDeSangreTexto}"  
-			required="true" requiredMessage="El campo Tipo de sangre es requerido" ></p:inputText>
-						
-			<h:outputText value="Nacionalidad" />
-			<p:inputText value="#{midatospersonaleController.midatospersonale.nacionalidad}"  
-			required="true" requiredMessage="El campo Nacionalidad es requerido" ><p:keyFilter regEx="/[a-z_]/i"/></p:inputText>
-			
-			<h:outputText value="Direccion" />
-			<p:inputText value="#{midatospersonaleController.midatospersonale.direccion}"  
-			required="true" requiredMessage="El campo Direccion es requerido" ></p:inputText>
-			
-			<h:outputText value="Telefono celular" />
-			<p:inputText value="#{midatospersonaleController.midatospersonale.telefonoCelular}"  
-			required="true" requiredMessage="El campo Telefono celular es requerido" ><p:keyFilter regEx="/[\d\-]/"/></p:inputText>
-			
-			<h:outputText value="Telefono convencional" />
-			<p:inputText value="#{midatospersonaleController.midatospersonale.telefonoConvencional}"  
-			required="true" requiredMessage="El campo Telefono convencional es requerido" ><p:keyFilter regEx="/[\d\-]/"/></p:inputText>
-			
-			<h:outputText value="Correo Electronico" />
-			<p:inputText value="#{midatospersonaleController.midatospersonale.correoElectronico}"  
-			required="true" requiredMessage="El campo Correo Electronico es requerido" ></p:inputText>
-			
-		</p:panelGrid>
-			<!--
 			<h:outputText value="Pais" />
-			<p:selectOneMenu id="Pais" value="#{midatospersonaleController.varMiPais}" required="true" requiredMessage="El campo Pais es requerido">
+			<p:selectOneMenu id="Pais" value="#{midatospersonaleController.varMiPais}"
+			required="true" requiredMessage="El campo Pais es requerido">
 				<f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
 				<f:selectItems value="#{midatospersonaleController.miPaisArray}" itemValue="#{midatospersonaleController.varMiPais}"/>
 				<f:ajax event="change" render="Provincia"/>
 			</p:selectOneMenu>
 			
+			<h:outputText value="Nacionalidad" />
+			<p:inputText value="#{midatospersonaleController.midatospersonale.nacionalidad}"  
+			required="true" requiredMessage="El campo Nacionalidad es requerido" ><p:keyFilter regEx="/[a-z_]/i"/></p:inputText>
+			
 			<h:outputText value="Provincia" />
-			<p:selectOneMenu id="Provincia" value="#{midatospersonaleController.varMiProvincia}" required="true" requiredMessage="El campo Provincia es requerido">
+			<p:selectOneMenu id="Provincia" value="#{midatospersonaleController.varMiProvincia}"
+			required="true" requiredMessage="El campo Provincia es requerido">
 				<f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
 				<f:selectItems value="#{midatospersonaleController.miProvinciaArray}" itemValue="#{midatospersonaleController.varMiProvincia}"/>
 				<f:ajax event="change" render="Canton"/>
 			</p:selectOneMenu>
 			
+			<h:outputText value="Direccion" />
+			<p:inputText value="#{midatospersonaleController.midatospersonale.direccion}"  
+			required="true" requiredMessage="El campo Direccion es requerido" ></p:inputText>
+			
 			<p:outputLabel value="Canton"/>
-			<p:selectOneMenu id="Canton" value="#{midatospersonaleController.varMiCanton}" required="true" requiredMessage="El campo Cantón es requerido">
+			<p:selectOneMenu id="Canton" value="#{midatospersonaleController.varMiCanton}"
+			required="true" requiredMessage="El campo Cantón es requerido">
 				<f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
 				<f:selectItems value="#{midatospersonaleController.miCantonArray}" itemValue="#{midatospersonaleController.varMiCanton}"/>
 				<f:ajax event="change" render="Parroquia"/>
 			</p:selectOneMenu>
-		
+			
+			<h:outputText value="Correo Electronico" />
+			<p:inputText value="#{midatospersonaleController.midatospersonale.correoElectronico}"  
+			required="true" requiredMessage="El campo Correo Electronico es requerido" ></p:inputText>
+			
 			<p:outputLabel value="Lugar de nacimiento"/>
-			<p:selectOneMenu id="Parroquia" value="#{midatospersonaleController.midatospersonale.parroquia.idParroquia}" required="true" requiredMessage="El campo Lugar de Nacimieto es requerido">
+			<p:selectOneMenu id="Parroquia" value="#{midatospersonaleController.midatospersonale.lugarDeNacimientoTexto}" 
+			required="true" requiredMessage="El campo Lugar de nacimiento es requerido">
 				<f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
-				<f:selectItems value="#{midatospersonaleController.miParroquiaArray}" itemValue="#{midatospersonaleController.varMiParroquia}"/>
+				<f:selectItems value="#{midatospersonaleController.miParroquiaArray}" itemValue="#{midatospersonaleController.nombreMiParroquia}"/>
 			</p:selectOneMenu>
 			
 			<h:outputText value="Estado Civil" />
-			<p:selectOneMenu id="EstadoCivil" value="#{midatospersonaleController.midatospersonale.estadoCivil.idEstadoCivil}" required="true" requiredMessage="El campo Estado Civil es requerido">
-				<f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
-				<f:selectItems value="#{midatospersonaleController.miEstadoCivilArray}" itemValue="#{midatospersonaleController.varMiEstadoCivil}"/>
-			</p:selectOneMenu>
+			<p:selectOneMenu id="EstadoCivil" value="#{midatospersonaleController.midatospersonale.estadoCivilTexto}"
+			required="true" requiredMessage="El campo Estado Civil es requerido">
+	            <f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
+				<f:selectItems value="#{midatospersonaleController.miEstadoCivilArray}" itemValue="#{midatospersonaleController.nombreMiEstadoCivil}"/>
+        	</p:selectOneMenu>
+        	
+			<h:outputText value="Telefono celular" />
+			<p:inputText value="#{midatospersonaleController.midatospersonale.telefonoCelular}"  
+			required="true" requiredMessage="El campo Telefono celular es requerido" ><p:keyFilter regEx="/[\d\-]/"/></p:inputText>
 			
 			<h:outputText value="Tipo de Sangre" />
-			<p:selectOneMenu id="TipoDeSangre" value="#{midatospersonaleController.midatospersonale.tipoDeSangre.idTipoDeSangre}" required="true" requiredMessage="El campo Tipo de sangre es requerido">
-				<f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
-				<f:selectItems value="#{midatospersonaleController.miTipoDeSangreArray}" itemValue="#{midatospersonaleController.varMiTipoDeSangre}"/>
-			</p:selectOneMenu> 
-			-->
+			<p:selectOneMenu id="TipoDeSangre" value="#{midatospersonaleController.midatospersonale.tipoDeSangreTexto}"
+			required="true" requiredMessage="El campo Tipo de sangre es requerido">
+	            <f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
+				<f:selectItems value="#{midatospersonaleController.miTipoDeSangreArray}" itemValue="#{midatospersonaleController.nombreMiTipoDeSangre}"/>
+        	</p:selectOneMenu>
+			
+			<h:outputText value="Telefono convencional" />
+			<p:inputText value="#{midatospersonaleController.midatospersonale.telefonoConvencional}"  
+			required="true" requiredMessage="El campo Telefono convencional es requerido" ><p:keyFilter regEx="/[\d\-]/"/></p:inputText>
+			
+			
+			
+		</p:panelGrid>
 		</h:form>
 	</body>
 </html>
