--- a/AppWeb/WebContent/web/newmicapacitacion.xhtml
+++ b/AppWeb/WebContent/web/newmicapacitacion.xhtml
@@ -77,8 +77,10 @@
 			required="true" requiredMessage="El campo Numero de horas es requerido" ><p:keyFilter regEx="/[\d\-]/"/></p:inputText>
 			
 			<h:outputText value="Tipo de Capacitacion" />
-			<p:inputText value="#{micapacitacionController.micapacitacion.tipoDeCapacitacionTexto}"  
-			required="true" requiredMessage="El campo Titulo de Capacitacion es requerido" ></p:inputText>
+			<p:selectOneMenu id="TipoDeCapacitacion" value="#{micapacitacionController.micapacitacion.tipoDeCapacitacionTexto}" required="true" requiredMessage="El campo Tipo de capacitacion es requerido">
+				<f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
+				<f:selectItems value="#{micapacitacionController.miTipoDeCapacitacionArray}" itemValue="#{micapacitacionController.nombreMiTipoDeCapacitacion}"/>
+			</p:selectOneMenu> 
 			
 			<h:outputLabel value="Fecha Inicial" for="finicial"/>
 			<p:calendar id="finicial" value="#{micapacitacionController.micapacitacion.fechaInicial}" pattern="dd/MM/yyyy"   locale="es" required="true" onkeypress="return permite(event, 'none')" requiredMessage="Fecha Inicial Requerida" navigator="true" effect="fadeIn" effectDuration="100" showOn="button">
@@ -91,12 +93,6 @@
 			</p:calendar>
 			
 		</p:panelGrid>
-		<!-- <h:outputText value="Tipo de Capacitacion" />
-			<p:selectOneMenu id="TipoDeCapacitacion" value="#{micapacitacionController.micapacitacion.tipoDeCapacitacion.idTipoDeCapacitacion}" required="true" requiredMessage="El campo Tipo de capacitacion es requerido">
-				<f:selectItem itemLabel="Seleccione un valor" noSelectionOption="true"/>
-				<f:selectItems value="#{micapacitacionController.miTipoDeCapacitacionArray}" itemValue="#{micapacitacionController.varMiTipoDeCapacitacion}"/>
-			</p:selectOneMenu> -->
-		
 		</h:form>
 	</body>
 </html>
