--- a/AppWeb/WebContent/web/newmireferenciaslaborale.xhtml
+++ b/AppWeb/WebContent/web/newmireferenciaslaborale.xhtml
@@ -60,7 +60,7 @@
 		<p:panelGrid columns="2">
 		    <f:facet name="header">
 		    	<p:row>
-		    		<h2><b>Capacitacion</b></h2>
+		    		<h2><b>Referencia Laboral</b></h2>
 		    	</p:row>
 		    </f:facet>
 		    
