--- a/AppWeb/WebContent/web/micapacitacion.xhtml
+++ b/AppWeb/WebContent/web/micapacitacion.xhtml
@@ -12,6 +12,7 @@
 <body> 
 	
 	<p:commandButton value="Nuevo" action="newmicapacitacion?faces-redirect=true" actionListener="#{micapacitacionController.limpiar}" ajax="true"></p:commandButton>
+	<p:button value="Volver" outcome="principal.jsf"/>
 	<h:form id="frmGeneral" enctype="multipart/form-data">
 	
 	<p:dataTable id="tablaCarpeta" var="a" value="#{micapacitacionController.listarMDP}" scrollable="true" scrollHeight="150">
