--- a/AppWeb/WebContent/web/midatospersonale.xhtml
+++ b/AppWeb/WebContent/web/midatospersonale.xhtml
@@ -12,6 +12,7 @@
 <body> 
 	
 	<p:commandButton value="Nuevo" action="newMDPersonale?faces-redirect=true" actionListener="#{midatospersonaleController.limpiar}" ajax="true"></p:commandButton>
+	<p:button value="Volver" outcome="principal.jsf"/>
 	<h:form id="frmGeneral" enctype="multipart/form-data">
 	
 	<p:dataTable id="tablaCarpeta" var="a" value="#{midatospersonaleController.listarMDP}" scrollable="true" scrollWidth="100%" scrollHeight="150">
